# flavors

./: CMakeLists.txt  README.md  cmake_linux_gen_makefiles_dbg.sh  cmake_linux_gen_makefiles_rel.sh  cmake_win_gen_makefiles_dbg.bat  cmake_win_gen_makefiles_rel.bat  cmake_win_gen_vs_2017.bat  cmake_win_gen_vs_2019.bat
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.h  dictionary.cpp  dictionary.h  hostBenchmark.h  ip.cpp  ip.h  randomBenchmark.h  runMain.cpp  words.cpp  words.h
benchmarks/definitions/: all_configs_5_strides.json  ip31bit.json  ip32_equal_distribution_strides.json  ip32_pipelined_fixed_strides.json  ip32_random.json  ip32_random_shuffled.json  ip32_wolant_strides.json  ip32bit.json  thesis_example.json
flavors/: CMakeLists.txt  configuration.cu  configuration.h  containers.h  dataInfo.cu  keys.cu  keys.h  masks.h  tree.cu  tree.h  utils.cu  utils.h
lib/cuda-api-wrappers/: api_wrappers.hpp
lib/cuda-api-wrappers/api/: constants.hpp  current_device.hpp  device.hpp  device_count.hpp  device_function.hpp  device_properties.cpp  device_properties.hpp  error.hpp  event.hpp  ipc.hpp  kernel_launch.cuh  memory.hpp  memory_device_impls.hpp  multi_wrapper_impls.hpp  pci_id.hpp  pci_id_impl.hpp  peer_to_peer.hpp  pointer.hpp  profiling.cpp  profiling.hpp  stream.hpp  unique_ptr.hpp  versions.hpp
samples/: CMakeLists.txt  keysSample.cpp  longKeysSample.cpp
test/: CMakeLists.txt  helpers.cpp  helpers.h  runTests.cpp  testConfiguration.cpp  testKeys.cpp  testLoad.cpp  testMasks.cpp  testTree.cpp  testUtils.cpp
